--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <link rel="stylesheet" href="http://www.tisaneteas.com/css/style.css">
 <script src="http://www.tisaneteas.com/js/vendor/modernizr-2.8.3.min.js"></script>
 <script type="text/javascript" src="http://www.tisaneteas.com/js/vendor/tabletop.js"></script>
-<script src="/instafeed.js" type="text/javascript"></script>
+<script src="instafeed.js" type="text/javascript"></script>
 </head>
 
 <body>
