--- a/index.html
+++ b/index.html
@@ -194,7 +194,8 @@
 						limit: 4,
 						sortBy: 'most-recent',
 						accessToken: '806978688.467ede5.f077f17b8f7a47c8a6914316b0822f62', //Replace with your access token
-						template: '<img style="width:129px; margin-left:3px;" src="{{image}}"/>'
+						template: '<img style="width:129px; margin-left:3px;" src="{{image}}"/>',
+						resolution: 'standard_resolution'
 					});
 					feed.run();
 
@@ -203,7 +204,8 @@
 						get: 'liked',
 						limit: 4,
 						accessToken: '806978688.467ede5.f077f17b8f7a47c8a6914316b0822f62', //Replace with your access token
-						template: '<img style="width:129px; margin-left:3px;" src="{{image}}"/>'
+						template: '<img style="width:129px; margin-left:3px;" src="{{image}}"/>',
+						resolution: 'standard_resolution'
 					});
 					feed2.run();
 				</script>
